# shelfy

./: .gitignore  AGENTS.md  CNAME  LICENSE.md  README.md  RELEASE.md  RESEARCH.md  TASK.md  index.html  package-lock.json  package.json  setup-vm.sh
.github/: FUNDING.yml
docs/: ORDEN_FLOW_DESIGN.md  UI_AUDIT.md  UI_SPEC.md  index.html  robots.txt  sitemap.xml
scripts/: test-orden-multi-source-move.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  Info.plist  installer.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/src/: cli.rs  commands.rs  db.rs  i18n.rs  ignore.rs  lib.rs  main.rs  mcp.rs  orden_jobs.rs  orden_runtime.rs  rules.rs  scheduler.rs  tray.rs  updater.rs  watcher.rs
src-tauri/src/commands/: config.rs  folders.rs  general.rs  history.rs  mcp.rs  mod.rs  orden.rs  rules.rs  scheduler.rs  settings.rs  system.rs  updater.rs
src-tauri/src/db/: export.rs  folders.rs  history.rs  mod.rs  orden.rs  rules.rs  scheduler.rs  settings.rs
src-tauri/src/orden/: action.rs  conflict.rs  filter.rs  location.rs  mod.rs  resource.rs  target_path.rs  template.rs  value.rs  walker.rs
src-tauri/src/orden/actions/: archive.rs  copy.rs  delete.rs  echo.rs  hardlink.rs  mod.rs  move_.rs  rename.rs  shell.rs  symlink.rs  trash.rs  write.rs
src-tauri/src/orden/filters/: created.rs  duplicate.rs  empty.rs  exif.rs  extension.rs  filecontent.rs  hash.rs  lastmodified.rs  mimetype.rs  mod.rs  name.rs  regex.rs  size.rs  timefilter.rs
(+52 files in other folders)
