[package]
name = "shelfy"
version = "0.1.4"
description = "Shelfy - Cross-platform intelligent file organizer"
authors = ["shelfy"]
edition = "2021"

[lib]
name = "shelfy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
notify = "7"
rusqlite = { version = "0.32", features = ["bundled", "chrono", "serde_json"] }
directories = "5"
once_cell = "1"
thiserror = "1"
regex = "1"
log = "0.4"
sys-locale = "0.3"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-single-instance = "2"
# organize module dependencies
globset = "0.4"
sha1 = "0.10"
sha2 = "0.10"
md-5 = "0.10"
hex = "0.4"
mime_guess = "2"
trash = "5"
anyhow = "1"
zip = "2"
kamadak-exif = "0.6"

[target.'cfg(target_os = "windows")'.dependencies]
tauri-winrt-notification = "0.7.2"
